--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'application'
 
 group 'kateway'
 version '0.0.1'
-mainClassName = "MainKt"
+mainClassName = "com.adamringhede.kateway.MainKt"
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
@@ -67,4 +67,5 @@ dependencies {
     compile "io.etcd:jetcd-core:$jetcd_version"
     compile 'org.koin:koin-core:2.0.1'
     testCompile 'org.koin:koin-test:2.0.1'
+    compile 'com.github.ajalt:clikt:2.1.0'
 }
