--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,11 @@ services:
     ports:
       - "2379:2379"
     hostname: etcd
-    command: "etcd --listen-client-urls http://0.0.0.0:2379 --advertise-client-urls http://etcd-1:2379"
+    command: "etcd --listen-client-urls http://0.0.0.0:2379 --advertise-client-urls http://etcd:2379"
+  kateway:
+    build: .
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+    environment:
+      - KATEWAY_ETCD_ENDPOINTS=http://etcd:2379
