--- a/build.gradle
+++ b/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     compile 'org.koin:koin-core:2.0.1'
     testCompile 'org.koin:koin-test:2.0.1'
     compile 'com.github.ajalt:clikt:2.1.0'
+    compile 'io.github.resilience4j:resilience4j-circuitbreaker:1.2.0'
+    compile 'io.github.resilience4j:resilience4j-retry:1.2.0'
+    compile 'io.github.resilience4j:resilience4j-kotlin:1.2.0'
 }
